--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 
         <section id="anxiety-info" class="service-detail-section">
             <h2 class="section-title" data-text-sv="Ångesthantering" data-text-en="Anxiety Management">Ångesthantering</h2>
-            <img src="4398105007465215543.jpeg" alt="Person som mediterar utomhus, för att representera lugn och mindfulness." class="detail-section-image">
+            <img src="anxiety-image.png" alt="Person som mediterar utomhus, för att representera lugn och mindfulness." class="detail-section-image">
             <p data-text-sv="Ångest kan kännas som en tyngd som begränsar din värld, fyller dina tankar med oro och skapar obehag i din kropp. Från en molande, allmän oro till plötsliga, överväldigande panikattacker – ångest tar sig många uttryck och kan göra vardagen till en ständig kamp. Vi vet att ångest är mer än bara en känsla; det är en komplex reaktion som påverkar ditt sinne, din kropp och ditt beteende. Här arbetar vi tillsammans för att förstå ångestens mekanismer och återta kontrollen. Jag guidar dig att identifiera dina specifika triggers, utveckla andnings- och avslappningstekniker för att lugna systemet, samt att omstrukturera tankemönster som vidmakthåller ångesten. Målet är att utrusta dig med konkreta, beprövade verktyg som hjälper dig att möta dina rädslor, minska symtomen och återupptäcka en känsla av lugn och trygghet i ditt liv. Du är inte ensam i denna upplevelse, och tillsammans kan vi bygga en tryggare väg framåt." data-text-en="Anxiety can feel like a weight limiting your world, filling your thoughts with worry, and causing discomfort in your body. From a nagging, general unease to sudden, overwhelming panic attacks – anxiety manifests in many ways and can make everyday life a constant struggle. We know that anxiety is more than just a feeling; it is a complex reaction that affects your mind, body, and behavior. Here, we work together to understand the mechanisms of anxiety and regain control. I guide you to identify your specific triggers, develop breathing and relaxation techniques to calm the system, and restructure thought patterns that perpetuate anxiety. The goal is to equip you with concrete, proven tools that help you confront your fears, reduce symptoms, and rediscover a sense of calm and security in your life. You are not alone in this experience, and together we can build a safer path forward.">Ångest kan kännas som en tyngd som begränsar din värld, fyller dina tankar med oro och skapar obehag i din kropp. Från en molande, allmän oro till plötsliga, överväldigande panikattacker – ångest tar sig många uttryck och kan göra vardagen till en ständig kamp. Vi vet att ångest är mer än bara en känsla; det är en komplex reaktion som påverkar ditt sinne, din kropp och ditt beteende. Här arbetar vi tillsammans för att förstå ångestens mekanismer och återta kontrollen. Jag guidar dig att identifiera dina specifika triggers, utveckla andnings- och avslappningstekniker för att lugna systemet, samt att omstrukturera tankemönster som vidmakthåller ångesten. Målet är att utrusta dig med konkreta, beprövade verktyg som hjälper dig att möta dina rädslor, minska symtomen och återupptäcka en känsla av lugn och trygghet i ditt liv. Du är inte ensam i denna upplevelse, och tillsammans kan vi bygga en tryggare väg framåt.</p>
             <a href="#services-section" class="back-to-services" data-text-sv="&larr; Tillbaka till Tjänster" data-text-en="&larr; Back to Services">&larr; Tillbaka till Tjänster</a>
         </section>
 
         <section id="depression-info" class="service-detail-section">
             <h2 class="section-title" data-text-sv="Depression och nedstämdhet" data-text-en="Depression and low mood">Depression och nedstämdhet</h2>
-            <p data-text-sv="När glädjen bleknar och vardagen känns tung, kan depressionens skugga breda ut sig. Det är en djupgående känsla av nedstämdhet som kan påverka allt från din energi, sömn och aptit till din förmåga att känna glädje och meningsfullhet. Kanske känner du dig tom, apatisk, eller har svårt att se en väg ut ur mörkret. Det är viktigt att veta att depression är en verklig och behandlingsbar sjukdom, och du behöver inte bära den ensam. I våra samtal skapar vi ett tryggt och förstående rum där du kan utforska dina känslor utan dömande. Vi fokuserar på att varsamt återinföra aktiviteter som ger energi och livsglädje, bygga upp sunda rutiner och identifiera tankemönster som håller dig kvar i nedstämdheten. Målet är att steg för steg hjälpa dig att återfå din inre styrka, upptäcka nya perspektiv och hitta tillbaka till ljuset och meningsfullheten i ditt liv. Tillsammans kan vi arbeta för att bygga en stabil grund för ditt välmående." data-text-en="When joy fades and everyday life feels heavy, the shadow of depression can spread. It is a profound feeling of low mood that can affect everything from your energy, sleep, and appetite to your ability to feel joy and meaning. Perhaps you feel empty, apathetic, or find it difficult to see a way out of the darkness. It is important to know that depression is a real and treatable illness, and you don't have to bear it alone. In our conversations, we create a safe and understanding space where you can explore your feelings without judgment. We focus on gently reintroducing activities that provide energy and zest for life, building healthy routines, and identifying thought patterns that keep you in a state of low mood. The goal is to gradually help you regain your inner strength, discover new perspectives and find your way back to the light and meaning in your life. Together, we can work to build a stable foundation for your well-being.">När glädjen bleknar och vardagen känns tung, kan depressionens skugga breda ut sig. Det är en djupgående känsla av nedstämdhet som kan påverka allt från din energi, sömn och aptit till din förmåga att känna glädje och meningsfullhet. Kanske känner du dig tom, apatisk, eller har svårt att se en väg ut ur mörkret. Det är viktigt att veta att depression är en verklig och behandlingsbar sjukdom, och du behöver inte bära den ensam. I våra samtal skapar vi ett tryggt och förstående rum där du kan utforska dina känslor utan dömande. Vi fokuserar på att varsamt återinföra aktiviteter som ger energi och livsglädje, bygga upp sunda rutiner och identifiera tankemönster som håller dig kvar i nedstämdheten. Målet är att steg för steg hjälpa dig att återfå din inre styrka, upptäcka nya perspektiv och hitta tillbaka till ljuset och meningsfullheten i ditt liv. Tillsammans kan vi arbeta för att bygga en stabil grund för ditt välmående.</p>
+            <p data-text-sv="När glädjen bleknar och vardagen känns tung, kan depressionens skugga breda ut sig. Det är en djupgående känsla av nedstämdhet som kan påverka allt från din energi, sömn och aptit till din förmåga att känna glädje och meningsfullhet. Kanske känner du dig tom, apatisk, eller har svårt att se en väg ut ur mörkret. Det är viktigt att veta att depression är en verklig och behandlingsbar sjukdom, och du behöver inte bära den ensam. I våra samtal skapar vi ett tryggt och förstående rum där du kan utforska dina känslor utan dömande. Vi fokuserar på att varsamt återinföra aktiviteter som ger energi och livsglädje, bygga upp sunda rutiner och identifiera tankemönster som håller dig kvar i nedstämdheten. Målet är att steg för steg hjälpa dig att återfå din inre styrka, upptäcka nya perspektiv och hitta tillbaka till ljuset och meningsfullheten i ditt liv. Tillsammans kan vi arbeta för att bygga en stabil grund för ditt välmående." data-text-en="When joy fades and everyday life feels heavy, the shadow of depression can spread. It is a profound feeling of low mood that can affect everything from your energy, sleep, and appetite to your ability to feel joy and meaning. Perhaps you feel empty, apathy, or find it difficult to see a way out of the darkness. It is important to know that depression is a real and treatable illness, and you don't have to bear it alone. In our conversations, we create a safe and understanding space where you can explore your feelings without judgment. We focus on gently reintroducing activities that provide energy and zest for life, building healthy routines, and identifying thought patterns that keep you in a state of low mood. The goal is to gradually help you regain your inner strength, discover new perspectives and find your way back to the light and meaning in your life. Together, we can work to build a stable foundation for your well-being.">När glädjen bleknar och vardagen känns tung, kan depressionens skugga breda ut sig. Det är en djupgående känsla av nedstämdhet som kan påverka allt från din energi, sömn och aptit till din förmåga att känna glädje och meningsfullhet. Kanske känner du dig tom, apatisk, eller har svårt att se en väg ut ur mörkret. Det är viktigt att veta att depression är en verklig och behandlingsbar sjukdom, och du behöver inte bära den ensam. I våra samtal skapar vi ett tryggt och förstående rum där du kan utforska dina känslor utan dömande. Vi fokuserar på att varsamt återinföra aktiviteter som ger energi och livsglädje, bygga upp sunda rutiner och identifiera tankemönster som håller dig kvar i nedstämdheten. Målet är att steg för steg hjälpa dig att återfå din inre styrka, upptäcka nya perspektiv och hitta tillbaka till ljuset och meningsfullheten i ditt liv. Tillsammans kan vi arbeta för att bygga en stabil grund för ditt välmående.</p>
             <a href="#services-section" class="back-to-services" data-text-sv="&larr; Tillbaka till Tjänster" data-text-en="&larr; Back to Services">&larr; Tillbaka till Tjänster</a>
         </section>
 
@@ -80,7 +80,7 @@
 
         <section id="talksupport-info" class="service-detail-section">
             <h2 class="section-title" data-text-sv="Samtalsstöd och vägledning" data-text-en="Talk Support and Guidance">Samtalsstöd och vägledning</h2>
-            <img src="18417985342088153449.jpeg" alt="Person som mediterar med en pratbubbla, för att symbolisera kommunikation och inre reflektion." class="detail-section-image">
+            <img src="talksupport-image.png" alt="Person som mediterar med en pratbubbla, för att symbolisera kommunikation och inre reflektion." class="detail-section-image">
             <p data-text-sv="Livet kan kasta många bollar i luften, och ibland behöver man helt enkelt ett tryggt utrymme för att sortera tankar, ventilera känslor och finna klarhet. Samtalsstöd är just det – en konfidentiell fristad där du kan tala fritt, utan rädsla för att bli dömd, och med en engagerad lyssnare vid din sida. Oavsett om du går igenom en svår sorg, kämpar med stress, navigerar komplexa relationsproblem, eller bara söker en djupare förståelse för dig själv och din situation, är jag här för dig. Vi kommer att utforska dina utmaningar, identifiera dina inre resurser och gemensamt finna nya perspektiv och handlingsvägar. Mitt mål är att du ska känna dig hörd, förstådd och stärkt att hantera livets upp- och nedgångar på ett mer konstruktivt sätt. Det handlar om att stärka din inre balans och ge dig verktygen att själv hitta din egen väg framåt med ökad trygghet och självkännedom." data-text-en="Life can throw many balls in the air, and sometimes you simply need a safe space to sort through thoughts, express feelings, and find clarity. Talk support is just that – a confidential sanctuary where you can speak freely, without fear of judgment, and with an engaged listener by your side. Whether you are going through a difficult grief, struggling with stress, navigating complex relationship problems, or simply seeking a deeper understanding of yourself and your situation, I am here for you. We will explore your challenges, identify your inner resources, and together find new perspectives and courses of action. My goal is to feel heard, understood, and empowered to handle life's ups and downs in a more constructive way. It's about strengthening your inner balance and giving you the tools to find your own path forward with increased security and self-awareness.">Livet kan kasta många bollar i luften, och ibland behöver man helt enkelt ett tryggt utrymme för att sortera tankar, ventilera känslor och finna klarhet. Samtalsstöd är just det – en konfidentiell fristad där du kan tala fritt, utan rädsla för att bli dömd, och med en engagerad lyssnare vid din sida. Oavsett om du går igenom en svår sorg, kämpar med stress, navigerar komplexa relationsproblem, eller bara söker en djupare förståelse för dig själv och din situation, är jag här för dig. Vi kommer att utforska dina utmaningar, identifiera dina inre resurser och gemensamt finna nya perspektiv och handlingsvägar. Mitt mål är att du ska känna dig hörd, förstådd och stärkt att hantera livets upp- och nedgångar på ett mer konstruktivt sätt. Det handlar om att stärka din inre balans och ge dig verktygen att själv hitta din egen väg framåt med ökad trygghet och självkännedom.</p>
             <a href="#services-section" class="back-to-services" data-text-sv="&larr; Tillbaka till Tjänster" data-text-en="&larr; Back to Services">&larr; Tillbaka till Tjänster</a>
         </section>
@@ -121,20 +121,6 @@
     </footer>
 
     <script>
-        // Funktion för att dölja alla detaljsektioner
-        function hideAllDetailSections() {
-            document.querySelectorAll('.service-detail-section').forEach(section => {
-                section.style.display = 'none';
-            });
-        }
-
-        // Initiera: dölj alla detaljsektioner vid sidladdning
-        document.addEventListener('DOMContentLoaded', () => {
-            hideAllDetailSections();
-            // Visa tjänstöversikten initialt om den inte redan är synlig (den är display:grid i CSS)
-            document.getElementById('servicesOverviewGrid').style.display = 'grid';
-        });
-
         // Smooth scrolling för navlänkar och service-detaljlänkar
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
@@ -143,35 +129,12 @@
                 if (href.length > 1 && href.startsWith('#')) {
                     e.preventDefault();
                     const targetId = href;
-
-                    // Om det är en länk till en services detail section
-                    if (this.closest('.services-grid')) { // Om länken kommer från översiktsrutorna
-                        hideAllDetailSections(); // Dölj alla detaljer
-                        document.getElementById('servicesOverviewGrid').style.display = 'none'; // Dölj översiktsrutorna
-                        document.querySelector(targetId).style.display = 'block'; // Visa den specifika detaljsektionen
-                        
-                        // Skrolla till den visade sektionen
-                        document.querySelector(targetId).scrollIntoView({
-                            behavior: 'smooth',
-                            block: 'start' // Skrolla till toppen av sektionen
-                        });
-                    } 
-                    // Om det är en "Tillbaka till Tjänster" länk
-                    else if (this.classList.contains('back-to-services')) {
-                        hideAllDetailSections(); // Dölj alla detaljsektioner
-                        document.getElementById('servicesOverviewGrid').style.display = 'grid'; // Visa översiktsrutorna
-                        document.querySelector('#services-section').scrollIntoView({ // Skrolla till toppen av tjänstesektionen
-                            behavior: 'smooth',
-                            block: 'start'
-                        });
-                    }
-                    // Annars, standard smooth scroll för andra navlänkar
-                    else {
-                        document.querySelector(targetId).scrollIntoView({
-                            behavior: 'smooth',
-                            block: 'start'
-                        });
-                    }
+                    
+                    // Skrolla till den visade sektionen
+                    document.querySelector(targetId).scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start' // Skrolla till toppen av sektionen
+                    });
                 }
                 // Stäng mobilmenyn om den är öppen
                 if (document.querySelector('.main-nav').classList.contains('active')) {
