--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button class="hamburger" aria-label="Toggle navigation">&#9776;</button>
     </nav>
 
-    <header id="home" class="hero-section snap-section">
+    <header id="home" class="hero-section">
         <img src="image.jpg" alt="Bakgrundsbild för En tryggare väg" class="hero-background-image">
         <div class="hero-content-overlay">
             <h1 data-text-sv="En tryggare väg" data-text-en="A Safer Path">En tryggare väg</h1>
@@ -30,7 +30,7 @@
     </header>
 
     <main>
-        <section id="services-section" class="content-section snap-section">
+        <section id="services-section" class="content-section">
             <h2 class="section-title" data-text-sv="Våra Tjänster" data-text-en="Our Services">Våra Tjänster</h2>
             <div class="services-grid" id="servicesOverviewGrid">
                 <a href="#anxiety-info" class="info-box-link">
@@ -83,7 +83,7 @@
             <p data-text-sv="Livet kan kasta många bollar i luften, och ibland behöver man helt enkelt ett tryggt utrymme för att sortera tankar, ventilera känslor och finna klarhet. Samtalsstöd är just det – en konfidentiell fristad där du kan tala fritt, utan rädsla för att bli dömd, och med en engagerad lyssnare vid din sida. Oavsett om du går igenom en svår sorg, kämpar med stress, navigerar komplexa relationsproblem, eller bara söker en djupare förståelse för dig själv och din situation, är jag här för dig. Vi kommer att utforska dina utmaningar, identifiera dina inre resurser och gemensamt finna nya perspektiv och handlingsvägar. Mitt mål är att du ska känna dig hörd, förstådd och stärkt att hantera livets upp- och nedgångar på ett mer konstruktivt sätt. Det handlar om att stärka din inre balans och ge dig verktygen att själv hitta din egen väg framåt med ökad trygghet och självkännedom." data-text-en="Life can throw many balls in the air, and sometimes you simply need a safe space to sort through thoughts, express feelings, and find clarity. Talk support is just that – a confidential sanctuary where you can speak freely, without fear of judgment, and with an engaged listener by your side. Whether you are going through a difficult grief, struggling with stress, navigating complex relationship problems, or simply seeking a deeper understanding of yourself and your situation, I am here for you. We will explore your challenges, identify your inner resources, and together find new perspectives and courses of action. My goal is to feel heard, understood, and empowered to handle life's ups and downs in a more constructive way. It's about strengthening your inner balance and giving you the tools to find your own path forward with increased security and self-awareness.">Livet kan kasta många bollar i luften, och ibland behöver man helt enkelt ett tryggt utrymme för att sortera tankar, ventilera känslor och finna klarhet. Samtalsstöd är just det – en konfidentiell fristad där du kan tala fritt, utan rädsla för att bli dömd, och med en engagerad lyssnare vid din sida. Oavsett om du går igenom en svår sorg, kämpar med stress, navigerar komplexa relationsproblem, eller bara söker en djupare förståelse för dig själv och din situation, är jag här för dig. Vi kommer att utforska dina utmaningar, identifiera dina inre resurser och gemensamt finna nya perspektiv och handlingsvägar. Mitt mål är att du ska känna dig hörd, förstådd och stärkt att hantera livets upp- och nedgångar på ett mer konstruktivt sätt. Det handlar om att stärka din inre balans och ge dig verktygen att själv hitta din egen väg framåt med ökad trygghet och självkännedom.</p>
             <a href="#services-section" class="back-to-services" data-text-sv="&larr; Tillbaka till Tjänster" data-text-en="&larr; Back to Services">&larr; Tillbaka till Tjänster</a>
         </section>
-        <section id="about-section" class="content-section about-me-container snap-section">
+        <section id="about-section" class="content-section about-me-container">
             <h2 class="section-title" data-text-sv="Om mig" data-text-en="About Me">Om mig</h2>
             <div class="about-me-layout">
                 <div class="about-me-image-wrapper">
@@ -95,16 +95,16 @@
             </div>
         </section>
 
-        <section id="contact-section" class="content-section contact-form-section snap-section">
+        <section id="contact-section" class="content-section contact-form-section">
             <h2 class="section-title" data-text-sv="Kontakta mig" data-text-en="Contact Me">Kontakta mig</h2>
-            <form action="#" method="POST" class="contact-form">
+            <form action="https://formspree.io/f/your_form_id" method="POST" class="contact-form">
                 <div class="form-group">
                     <label for="name" data-text-sv="Namn:" data-text-en="Name:">Namn:</label>
                     <input type="text" id="name" name="name" required>
                 </div>
                 <div class="form-group">
                     <label for="email" data-text-sv="E-post:" data-text-en="Email:">E-post:</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="_replyto" required>
                 </div>
                 <div class="form-group">
                     <label for="message" data-text-sv="Meddelande:" data-text-en="Message:">Meddelande:</label>
